Add hubspot script link into body

--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,9 @@
         style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
-  </body>
+    <!-- Start of HubSpot Embed Code -->
+    <script type=“text/javascript” id=“hs-script-loader” async defer src=“//js.hs-scripts.com/6447437.js”> </script>
+      <!-- End of HubSpot Embed Code -->
+      </body>
 
 </html>
