--- a/public/index.html
+++ b/public/index.html
@@ -94,11 +94,13 @@
         <!-- End of HubSpot Embed Code -->
 
         <!-- Start Alexa Certify Javascript -->
-        <script type=“text/javascript”>
-            _atrk_opts = { atrk_acct:“ybFMu1ah9W20em”, domain:“emirex.com”,dynamic: true};
-            (function() { var as = document.createElement(‘script’); as.type = ‘text/javascript’; as.async = true; as.src = “https://certify-js.alexametrics.com/atrk.js”; var s = document.getElementsByTagName(‘script’)[0];s.parentNode.insertBefore(as, s); })();
+        <script type="text/javascript">
+            _atrk_opts = { atrk_acct:"ybFMu1ah9W20em", domain:"emirex.com",dynamic: true};
+            (function() { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://certify-js.alexametrics.com/atrk.js"; var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(as, s); })();
         </script>
-        <noscript><img src=“https://certify.alexametrics.com/atrk.gif?account=ybFMu1ah9W20em” style=“display:none” height=“1” width=“1" alt=“” /></noscript>
+        <noscript>
+            <img src="https://certify.alexametrics.com/atrk.gif?account=ybFMu1ah9W20em" style="display:none" height="1" width="1" alt="" />
+        </noscript>
         <!-- End Alexa Certify Javascript -->
     </body>
 </html>
