Feature: CE-2952 yarndex

--- a/public/index.html
+++ b/public/index.html
@@ -102,5 +102,6 @@
             <img src="https://certify.alexametrics.com/atrk.gif?account=ybFMu1ah9W20em" style="display:none" height="1" width="1" alt="" />
         </noscript>
         <!-- End Alexa Certify Javascript -->
+        <meta name="yandex-verification" content="5dc66e12f6415c8b" />
     </body>
 </html>
