--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
         <!-- End Facebook Pixel Code -->
     </head>
 
-    <body>
+    <body id="google_translate_element">
         <script src="%PUBLIC_URL%/config/env.js"></script>
         <noscript>
             You need to enable JavaScript to run this app.
@@ -89,6 +89,7 @@
         ></noscript>
         <!-- End Google Tag Manager (noscript) -->
         <div id="root"></div>
+        <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> 
         <!-- Start of HubSpot Embed Code -->
         <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/6447437.js"></script>
         <!-- End of HubSpot Embed Code -->
