Feature: CE-3024 styling

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
         <!-- End Facebook Pixel Code -->
     </head>
 
-    <body id="google_translate_element">
+    <body>
         <script src="%PUBLIC_URL%/config/env.js"></script>
         <noscript>
             You need to enable JavaScript to run this app.
@@ -124,5 +124,6 @@
         </noscript>
         <!-- End Alexa Certify Javascript -->
         <meta name="yandex-verification" content="5dc66e12f6415c8b" />
+        <div id="google_translate_element"></div>
     </body>
 </html>
